--- a/src/calculator.css
+++ b/src/calculator.css
@@ -62,6 +62,23 @@ body{
   margin-top: 15px;
 }
 
+.wage_results{
+  width: 90%;
+  max-width: 675px;
+  display: flex;
+  flex-direction: column;
+}
 
+.wage_results_title{
+
+}
+
+.results_container{
+
+}
+
+.results_container_title{
+  
+}
 
 
