--- a/src/calculator.css
+++ b/src/calculator.css
@@ -16,9 +16,17 @@ body{
   font-size: 3rem;
 }
 
-.tip_container{
-  width: 90%;
+main{
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.wage_form_container{
+  display: flex;
+  width: 47.5%;
   flex-direction: column;
   align-items: center;
 }
@@ -27,6 +35,8 @@ body{
   width: 95%;
   max-width: 675px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
   border-radius: 4px;
 }
 
@@ -56,14 +66,18 @@ body{
 
 .wage_form_button{
   font-size: 1.5rem;
-  width: 90%;
-  max-width: 480px;
+  width: 100%;
+  max-width: 600px;
   padding: 10px 25px;
   margin-top: 15px;
 }
 
-.wage_results{
-  width: 90%;
+.wage_results_inactive{
+  display: none;
+}
+
+.wage_results_active{
+  width: 47.5%;
   max-width: 675px;
   display: flex;
   flex-direction: column;
@@ -77,8 +91,17 @@ body{
 
 }
 
+.results_container > p{
+  font-size: 1.125rem;
+}
+
+.results_number{
+
+}
+
 .results_container_title{
-  
+  margin-bottom: 5px;
+  border-bottom: 2px solid black;
 }
 
 
