finished proof of concept

--- a/src/calculator.css
+++ b/src/calculator.css
@@ -104,4 +104,9 @@ main{
   border-bottom: 2px solid black;
 }
 
-
+@media screen and (max-width: 900px) {
+  .wage_form_container,
+  .wage_results_active{
+    width: 95%;
+  }
+}
