--- a/src/calculator.css
+++ b/src/calculator.css
@@ -40,11 +40,21 @@ main{
   border-radius: 4px;
 }
 
+.wage_form > fieldset{
+  border-radius: 6px;
+}
+
+.wage_form > fieldset:nth-child(1){
+  margin-bottom: 40px;
+}
+
 .wage_form_group{
   display: flex;
   flex-direction: column;
   margin-bottom: 1.5rem;
 }
+
+
 
 .wage_form_legend{
   font-size: 1.35rem;
@@ -67,7 +77,7 @@ main{
 .wage_form_button{
   font-size: 1.5rem;
   width: 100%;
-  max-width: 600px;
+  /* max-width: 600px; */
   padding: 10px 25px;
   margin-top: 15px;
 }
@@ -96,7 +106,12 @@ main{
 }
 
 .results_number{
+  font-weight:700
+}
 
+.initial_title{
+  font-size: 1.125rem;
+  margin: 5px 10px;
 }
 
 .results_container_title{
