--- a/src/calculator.css
+++ b/src/calculator.css
@@ -95,6 +95,11 @@ main {
 }
 
 .results_container {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: row;
+  padding: 20px 15px;
+  vertical-align: middle;
 }
 
 .results_container > p {
@@ -112,12 +117,58 @@ main {
 
 .results_container_title {
   margin-bottom: 5px;
-  border-bottom: 2px solid black;
+  width: 35%;
+  padding: 5px;
+  margin-right: 30px;
+}
+
+.results_info{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 350px;
+}
+
+.results_info > p{
+  padding-bottom: 15px;
+  border-bottom: 1px solid grey;
+}
+
+.results_info .results_number{
+  float: right;
+  border: 1px solid black;
+  padding: 4px 12px;
+  border-radius: 4px;
 }
 
 @media screen and (max-width: 900px) {
   .wage_form_container,
   .wage_results_active {
     width: 95%;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .results_container{
+    flex-direction: column;
+  }
+
+  .results_container_title{
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 700px) and  (max-width: 899px){
+  .results_container{
+    flex-direction: row;
+  }
+  .results_container_title{
+    width: 50%;
+  }
+
+  .results_info{
+    width: 100%;
+    max-width: 350px;
   }
 }
