--- a/src/calculator.css
+++ b/src/calculator.css
@@ -100,6 +100,8 @@ main {
   flex-direction: row;
   padding: 20px 15px;
   vertical-align: middle;
+  border-radius: 6px;
+  margin-bottom: 40px;
 }
 
 .results_container > p {
@@ -115,10 +117,16 @@ main {
   margin: 5px 10px;
 }
 
+#upFrontContainer{
+  margin-top: 40px;
+}
+
 .results_container_title {
   margin-bottom: 5px;
   width: 35%;
   padding: 5px;
+  font-size: 1.45rem;
+  line-height: 2.6rem;
   margin-right: 30px;
 }
 
